# Europa-Life

./: .gitignore  README.md  pyproject.toml
configs/: dev_fast.json  evening_3hour_quality.json  overnight_deep_run.json  overnight_quality.json  workspace_large.json
docs/: EuropaLife_CaseStudy_Public.pptx  architecture_note.md  europa_life_erd.md  evening_3hour_quality_results.md  github_publish_notes.md  latest_run_results.md  workspace_large_results.md
prompts/generator/: doc_generation.prompt.txt
prompts/judge/: audit_case.prompt.txt
prompts/mission_seed/: mission_seed.prompt.txt
prompts/resolver/: resolver_decide.prompt.txt
scripts/: export_github_snapshot.ps1  run_dev_fast.ps1  run_evening_3hour_quality.ps1  run_overnight_deep_run.ps1  run_overnight_quality.ps1  run_workspace_large.ps1
sql/: llm_usage_queries.sql  schema.sql  starter_queries.sql
src/: europa_pipeline.py
